<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Busko Trust

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.
-->
<resources>
    <string name="stopTracking">Stop Tracking</string>
    <string name="startTracking">Start Tracking</string>
    <string name="app_name">Bus Stop Locator</string>
    <string name="settings_screen_name">Bus Stop Locator Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_write_to_file">Could not write to file </string>
    <string name="description_added">Description added to file</string>
    <string name="not_yet">Not Yet</string>
    <string name="cant_add_description_until_next_point">You can\'t add a description until the next point has been logged to a file.</string>
    <string name="add_description">Add a description</string>
    <string name="letters_numbers">Use only letters and numbers</string>
    
    <!-- menu strings -->
    <string name="menu_exit">Exit</string>
    <string name="Preferences">Preferences</string>
    
    <!-- main form labels -->
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_altitude">Altitude:</string>
    <string name="txt_speed">Speed:</string>
    <string name="txt_direction">Direction:</string>
    <string name="txt_satellites">Satellites:</string>
    <string name="txt_accuracy">Accuracy:</string>
    <string name="btn_start_logging">Start Logging</string>
    <string name="btn_stop_logging">Stop Logging</string>
    
    
    <!-- general -->
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;meter</string>
    <string name="meters">&#160;meters</string>
    <string name="error">Error</string>
    <string name="error_connection">Connection Error. Please check your phone settings.</string>
    <string name="sent">Sent</string>
    <string name="sent_server">Points sent to server.</string>
    <string name="sent_location">Location sent to server.</string>
    <string name="cleared">Cleared</string>
    <string name="cleared_map">The map has been cleared.</string>
    <string name="gpsprovider_unavailable">No GPS provider available.</string>
    <string name="started">Started</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(Using %s)</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">&#189; minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">&#189; hour</string>
    <string name="time_oneandhalfhours">1&#189; hours</string>
    <string name="time_twoandhalfhours">2&#189; hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    
    
    
    <string name="pref_performance_title">Performance</string>
    <string name="prefer_celltower_title">Prefer celltowers</string>
    <string name="prefer_celltower_summary">Uses celltowers rather than satellites. Less accurate, but saves more battery.</string>
    <string name="time_before_logging_title">Time before logging</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life.</string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="distance_before_logging_title">Distance before logging</string>
    <string name="distance_before_logging_summary">Use 0 for maximum frequency, but a higher number is better for battery life.</string>
    
    <string name="pref_extras_title">Extras</string>
    <string name="useimperial_title">Use Imperial units</string>
    <string name="useimperial_summary">Use feet, miles and pints, none of that newfangled metric stuff.</string>
    <string name="show_notification_title">Show Notification</string>
    <string name="show_notification_summary">Displays a reminder along with coordinates in the notification bar.</string>
    
    
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    
    <string name="startonbootup_title">Start on bootup</string>
    <string name="startonbootup_summary">Launch app and start logging when phone starts</string>
    
    <string name="fix_obtained">Fix obtained</string>
    <string name="started_waiting">GPS started, waiting for fix</string>
    <string name="gps_stopped">GPS stopped</string>
    <string name="stopped">Stopped</string>
    

	<string name="url_setprefs">Custom URL preferences</string>
	<string name="url_setprefs_summary">The custom URL to send location information to</string>
	<string name="url_location">Custom URL</string>
	<string name="url_location_summary">Set the custom URL</string>
	<string name="Starting">Starting...</string>
	<string name="Mark">Mark</string>
	<string name="Exit">Exit</string>
	<string name="mark_counter">GPS Warming Up</string>
	<string name="vehicle">Vehicle</string>
	<string name="routeID">Route</string>
	<string name="route_time">Route Time</string>
	<string name="route_info">Route Information</string>
	<string name="sys_info">System Info</string>
	<string name="url">URL</string>
	
	    <string name="gpslogger_still_running">Busko is still running</string>

	<string name="logger_title">Busko</string>
	<string name="logger_instruction1">Please watch carefully for bus stops\nPress \'Mark\' each time you pass a stop</string>
</resources>
